[project]
name = "telegram-backup"
version = "0.1.0"
description = "Telegram chat backup tool — messages, media, reactions to SQLite + HTML"
readme = "README.md"
requires-python = ">=3.12.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "jinja2>=3.1.6",
    "python-dotenv>=1.2.1",
    "telethon>=1.42.0",
]
